// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Content block html metadata assert during edit 1`] = `
<div>
  <div
    data-sfhasquickeditoperation="true"
    data-sfid="static"
    data-sfiscontentwidget="true"
    data-sfisempty="false"
    data-sfisemptyvisualhidden="false"
    data-sfisorphaned="false"
    data-sfname="SitefinityContentBlock"
    data-sftitle="Content block"
    draggable="true"
  >
    Test content
  </div>
</div>
`;

exports[`Content block render Content property 1`] = `
<div>
  <div>
    Test content
  </div>
</div>
`;

exports[`Content block render with Content item 1`] = `
<div>
  <div>
    Test content block content
  </div>
</div>
`;

exports[`Content block with custom attributes 1`] = `
<div>
  <div
    test-attribute-key="test-attribute-value"
  >
    Test content
  </div>
</div>
`;

exports[`Content block with custom tag name(CB_TagName_Rendered) 1`] = `
<div>
  <h1>
    Test content
  </h1>
</div>
`;
